# kcmcontrol

./: .gitignore  CMakeLists.txt
include/: client_listener.h  client_manager.h  client_watcher.h  jack_client.h  jack_input.h  jack_output.h  midi_output.h  osc_client.h  osc_endpoint.h  osc_message.h  osc_processor.h  osc_server.h  sigwatch.h
src/: client_listener.cpp  client_manager.cpp  client_watcher.cpp  jack_client.cpp  jack_input.cpp  jack_output.cpp  main.cpp  midi_output.cpp  osc_client.cpp  osc_endpoint.cpp  osc_message.cpp  osc_processor.cpp  osc_server.cpp  sigwatch.cpp
